--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ features = ["serde-1", "quickcheck"]
 no-dev-version = true
 
 [workspace]
-members = ["serialization-tests", "core", "graph", "adjacency-list", "graphmap"]
+members = ["serialization-tests", "core", "graph", "adjacency-matrix", "graphmap"]
 
 [workspace.dependencies]
 fixedbitset = { version = "0.4", default-features = false }
@@ -39,7 +39,7 @@ indexmap = { version = "1.9.3", default-features = false }
 petgraph = { path = "." }
 petgraph-core = { path = "./core", default-features = false }
 petgraph-graph = { path = "./graph", default-features = false }
-petgraph-adjacency-list = { path = "./adjacency-list", default-features = false }
+petgraph-adjacency-matrix = { path = "./adjacency-matrix", default-features = false }
 petgraph-graphmap = { path = "./graphmap", default-features = false }
 
 [dependencies]
@@ -50,7 +50,7 @@ serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 petgraph-core = { workspace = true }
 petgraph-graph = { workspace = true }
-petgraph-adjacency-list = { workspace = true }
+petgraph-adjacency-matrix = { workspace = true }
 petgraph-graphmap = { workspace = true, features = ['convert'] }
 
 [dev-dependencies]
