--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ features = ["serde-1", "quickcheck"]
 no-dev-version = true
 
 [workspace]
-members = ["serialization-tests", "core", "graph", "adjacency-matrix", "graphmap", "csr"]
+members = ["serialization-tests", "core", "graph", "adjacency-matrix", "graphmap", "csr", "matrix-graph"]
 
 [workspace.dependencies]
 fixedbitset = { version = "0.4", default-features = false }
@@ -42,6 +42,7 @@ petgraph-graph = { path = "./graph", default-features = false }
 petgraph-adjacency-matrix = { path = "./adjacency-matrix", default-features = false }
 petgraph-graphmap = { path = "./graphmap", default-features = false }
 petgraph-csr = { path = "./csr", default-features = false }
+petgraph-matrix-graph = { path = "./matrix-graph", default-features = false }
 
 [dependencies]
 fixedbitset = { version = "0.4.0", default-features = false }
@@ -49,11 +50,13 @@ indexmap = { version = "1.7", features = ["std"] }
 quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
-petgraph-core = { workspace = true }
-petgraph-graph = { workspace = true }
-petgraph-adjacency-matrix = { workspace = true, optional = true }
-petgraph-graphmap = { workspace = true, features = ['convert'], optional = true }
-petgraph-csr = { workspace = true, optional = true }
+
+petgraph-core = { workspace = true, default-features = false }
+petgraph-graph = { workspace = true, default-features = false }
+petgraph-adjacency-matrix = { workspace = true, optional = true, default-features = false }
+petgraph-graphmap = { workspace = true, features = ['convert'], optional = true, default-features = false }
+petgraph-csr = { workspace = true, optional = true, default-features = false }
+petgraph-matrix-graph = { workspace = true, optional = true, default-features = false }
 
 [dev-dependencies]
 bincode = "1.3.3"
@@ -63,20 +66,24 @@ odds = { version = "0.4.0" }
 rand = "0.5.5"
 
 [features]
-
-
 default = ["std", "graphmap", "stable-graph", "matrix-graph", "csr", "adjacency-matrix"]
 
 #generate = [] # For unstable features
 
 graphmap = ["dep:petgraph-graphmap"]
-matrix-graph = []
+matrix-graph = ["dep:petgraph-matrix-graph"]
 csr = ["dep:petgraph-csr"]
 serde = ["dep:serde", "serde_derive"]
 stable-graph = ["petgraph-graph/stable"]
 adjacency-matrix = ["dep:petgraph-adjacency-matrix"]
 #unstable = ["generate"]
-std = ["petgraph-core/std", "petgraph-graph/std", "petgraph-adjacency-matrix?/std", "petgraph-graphmap?/std", "petgraph-csr?/std"]
+std = [
+    "petgraph-core/std",
+    "petgraph-graph/std",
+    "petgraph-adjacency-matrix?/std",
+    "petgraph-graphmap?/std",
+    "petgraph-csr?/std"
+]
 
 
 [lib]
