--- a/matrix-graph/Cargo.toml
+++ b/matrix-graph/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-petgraph-core = { workspace = true, features = ["alloc", "indexmap"] }
+funty.workspace = true
+indexmap.workspace = true
+fixedbitset.workspace = true
+petgraph-core = { workspace = true, features = ["alloc", "fixedbitset"] }
 
 [dev-dependencies]
 
