--- a/algorithms/Cargo.toml
+++ b/algorithms/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2021"
 
 [dependencies]
 petgraph-core = { workspace = true, features = ["alloc", "fixedbitset"] }
-hashbrown.workspace = true
+petgraph-adjacency-matrix.workspace = true
+# Like `std::collection::HashMap`, `IndexMap` is built on top of `hashbrown`, but because
+# we're already using `IndexMap` in a lot of crates I do not want to pull in `hashbrown`
+# separately as it would be another version to maintain. This way we only have one version.
+indexmap.workspace = true
+fixedbitset.workspace = true
 
 [build-dependencies]
 rustc_version = "0.4.0"
