--- a/algorithms/Cargo.toml
+++ b/algorithms/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 petgraph-core = { workspace = true, features = ["alloc", "fixedbitset"] }
-petgraph-adjacency-matrix.workspace = true
+petgraph-graph = { workspace = true, optional = true }
+petgraph-adjacency-matrix = { workspace = true, optional = true }
 funty.workspace = true
 # Like `std::collection::HashMap`, `IndexMap` is built on top of `hashbrown`, but because
 # we're already using `IndexMap` in a lot of crates I do not want to pull in `hashbrown`
@@ -24,3 +25,6 @@ petgraph-graph.workspace = true
 [features]
 default = ["std"]
 std = ["petgraph-core/std"]
+
+remove-me-only-intended-for-move-graph = ["dep:petgraph-graph"]
+remove-me-only-intended-for-move-adjacency-matrix = ["dep:petgraph-adjacency-matrix"]
