--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@ petgraph-core = { workspace = true, default-features = false }
 petgraph-csr = { workspace = true, optional = true, default-features = false }
 petgraph-graph = { workspace = true, default-features = false }
 petgraph-matrix-graph = { workspace = true, optional = true, default-features = false }
-petgraph-algorithms = { workspace = true, default-features = false }
+petgraph-algorithms = { workspace = true, default-features = false, features = ["remove-me-only-intended-for-move-graph"] }
 quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
@@ -76,7 +76,7 @@ odds = { version = "0.4.0" }
 rand = "0.5.5"
 
 [features]
-adjacency-matrix = ["dep:petgraph-adjacency-matrix"]
+adjacency-matrix = ["dep:petgraph-adjacency-matrix", "petgraph-algorithms/remove-me-only-intended-for-move-adjacency-matrix"]
 csr = ["dep:petgraph-csr"]
 default = ["std", "graphmap", "stable-graph", "matrix-graph", "csr", "adjacency-matrix"]
 #generate = [] # For unstable features
