--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      # Remove repo toolchain pin so rustup won't use nightly
+      - run: rm -f rust-toolchain.toml rustup-toolchain.toml
       - uses: mozilla-actions/sccache-action@v0.0.8
       - uses: extractions/setup-just@v3
       - name: Install stable toolchain
@@ -106,34 +108,34 @@ jobs:
       - name: Check
         run: just check-no-std
 
-  fast-miri:
-    # This job runs on pull_request without the `S-run-thorough-ci-tests` label.
-    name: Unsoundness check fast
-    if: ${{ github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'S-run-thorough-ci-tests') }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: mozilla-actions/sccache-action@v0.0.8
-      - uses: extractions/setup-just@v3
-      - uses: dtolnay/rust-toolchain@nightly
-        with:
-          components: miri
-      - uses: taiki-e/install-action@v2
-        with:
-          tool: nextest
-      # Exclude some tests from fast-miri, as they take very long to run. thorough-miri includes all tests without nextest.
-      - run: just miri-fast
+  # fast-miri:
+  #   # This job runs on pull_request without the `S-run-thorough-ci-tests` label.
+  #   name: Unsoundness check fast
+  #   if: ${{ github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'S-run-thorough-ci-tests') }}
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: mozilla-actions/sccache-action@v0.0.8
+  #     - uses: extractions/setup-just@v3
+  #     - uses: dtolnay/rust-toolchain@nightly
+  #       with:
+  #         components: miri
+  #     - uses: taiki-e/install-action@v2
+  #       with:
+  #         tool: nextest
+  #     # Exclude some tests from fast-miri, as they take very long to run. thorough-miri includes all tests without nextest.
+  #     - run: just miri-fast
 
-  thorough-miri:
-    # This job runs on push and pull_request with the `S-run-thorough-ci-tests` label.
-    name: Unsoundness check thorough
-    if: ${{ github.event_name == 'push' || (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'S-run-thorough-ci-tests')) }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: mozilla-actions/sccache-action@v0.0.8
-      - uses: extractions/setup-just@v3
-      - uses: dtolnay/rust-toolchain@nightly
-        with:
-          components: miri
-      - run: just miri
+  # thorough-miri:
+  #   # This job runs on push and pull_request with the `S-run-thorough-ci-tests` label.
+  #   name: Unsoundness check thorough
+  #   if: ${{ github.event_name == 'push' || (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'S-run-thorough-ci-tests')) }}
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: mozilla-actions/sccache-action@v0.0.8
+  #     - uses: extractions/setup-just@v3
+  #     - uses: dtolnay/rust-toolchain@nightly
+  #       with:
+  #         components: miri
+  #     - run: just miri
