--- a/.github/workflows/merge-check.yml
+++ b/.github/workflows/merge-check.yml
@@ -10,7 +10,7 @@ name: Merge check
 jobs:
   powerset_features_test:
     # This job runs on pushes to master or pull_request with the `S-run-thorough-ci-tests` label.
-    if: (${{ github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'S-run-thorough-ci-tests') }}) || (${{ github.event_name == 'push' }})
+    if: ${{ (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'S-run-thorough-ci-tests')) || github.event_name == 'push' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
